test/CheckError/Const/ModifyInsideConstMethod.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass(int value) {
	static create = default;
	
	void modifyNonConst() {
		@value = 100;
	}
	
	void modifyConst() const {
		// CHECK: .loci:13:3: error: cannot assign non-movable type 'const(int_t)'
		@value = 100;
	}
}

// CHECK: 1 error generated.
